# pyholdsport

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  mkdocs.yml  noxfile.py  pyproject.toml  ruff.toml  zensical.toml
.github/: dependabot.yml
.github/linters/: .megalinter.yml
.github/workflows/: cd.yml  ci.yml
docs/: create_instance.md  examples.md  get_activities.md  get_activities_users.md  get_activity.md  get_activity_at_date.md  get_coaches_attending_activity.md  get_member.md  get_members.md  get_teams.md  index.md
docs/reference/: holdsport.md  models.md
docs/snippets/: create_instance_environment_variables.py
docs_src/: create_instance_input_arguments.py  get_activities.py  get_activities_users.py  get_activity.py  get_activity_at_date.py  get_coaches_attending_activity.py  get_member.py  get_members.py  get_teams.py
src/pyholdsport/: __init__.py  holdsport.py  models.py
tests/: conftest.py  get_activities_test.py  get_activities_users_test.py  get_activity_test.py  get_member_test.py  get_members_test.py  get_teams_test.py  set_auth_credentials_test.py  test_get_activities.py  test_get_activities_users.py  test_get_members.py  test_get_teams.py  test_set_auth_credentials.py
