# Build System
[build-system]
  requires = ["uv_build"]
  build-backend = "uv_build"

# Project Metadata
[project]
  name = "pyholdsport"
  version = "0.0.0"
  description = "Unofficial python library for interacting with holdsport."
  readme = "README.md"
  license = { file = "LICENSE" }
  authors = [{ name = "Daniel Mizsak", email = "daniel@mizsak.com" }]
  requires-python = ">=3.10"
  dependencies = ["httpx==0.28.1", "pydantic==2.12.5"]

  [project.urls]
    Issues = "https://github.com/daniel-mizsak/pyholdsport/issues"
    Repository = "https://github.com/daniel-mizsak/pyholdsport"

[dependency-groups]
  dev = ["coverage", "nox", "pre-commit", "pytest", "respx", "ruff", "ty"]
  docs = ["zensical", "mkdocstrings[python]"]
