# Build System
[build-system]
  requires = ["uv_build"]
  build-backend = "uv_build"

# Project Metadata
[project]
  name = "pyholdsport"
  version = "0.0.0"
  description = "Unofficial Python library for interacting with Holdsport."
  readme = "README.md"
  license = { file = "LICENSE" }
  authors = [{ name = "Daniel Mizsak", email = "daniel@mizsak.com" }]
  requires-python = ">=3.10"
  dependencies = ["httpx>=0.28.1", "pydantic>=2.12.5"]

  [project.urls]
    Issues = "https://github.com/daniel-mizsak/pyholdsport/issues"
    Repository = "https://github.com/daniel-mizsak/pyholdsport"

[dependency-groups]
  dev = [
    "coverage==7.13.5",
    "nox==2026.4.10",
    "prek==0.3.9",
    "pytest==9.0.3",
    "respx==0.23.1",
    "ruff==0.15.10",
    "ty==0.0.29",
  ]
  docs = ["zensical==0.0.32", "mkdocstrings[python]==1.0.3"]

# Tools
# Uv
[tool.uv]
  exclude-newer = "1 week"
